Refactor Task and MongoService classes: add ObjectId handling, update constructors and methods for task management, and enhance DashboardUI for improved task creation and editing.